feat: update education and experiences sep 2022

--- a/stories/education/NUS.stories.mdx
+++ b/stories/education/NUS.stories.mdx
@@ -17,3 +17,27 @@ import NUS_LOGO from '../assets/education/education_nus.svg';
 
 # National University of Singapore
 ## Bachelor of Computing (Hons), Computer Science (Aug 2019 - Dec 2022) 
+
+#### Focus Area: Software Engineering & Software Security
+
+### Courses
+- C++ Software Engineering Project
+- Data Structures and Algorithms
+- Design and Analysis of Algorithms
+- Programming Methodology II (Java OOP)
+- Cloud Computing
+- Big Data Systems for Data Science
+- Introduction to AI
+- Machine Learning
+- Parallel Computing
+
+### Teaching Assistants
+- Programming Methodology II (Java OOP): AY2020/21 Sem 1, Sem 2, AY2021/22 Sem 1
+- Introduction to AI: AY2021/22 Sem 1
+- Software Engineering Principles: AY2022/23 Sem 1
+
+### Activities
+- NUS Fintech Society Blockchain Developer
+  - Fund Token
+  - Potamus (Lending and Loaning)
+- NUS Entrepreneurship Society Core Event Planner
