--- a/stories/experience/X_JPMorgan.stories.mdx
+++ b/stories/experience/X_JPMorgan.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from '@storybook/addon-docs';
+import jpmChasePic from '../assets/experience/jpmorgan.png'
 
 <Meta title="Experiences/JPMorganChase" />
 
@@ -9,10 +10,16 @@ import { Meta } from '@storybook/addon-docs';
   }}
 >
   <img 
-    src="https://g.foolcdn.com/art/companylogos/square/jpm.png"
+    src={jpmChasePic}
     height="200px"
   />
 </div>
 
 # JP Morgan Chase
 ## Software Engineering Intern (May - Aug 2022)
+
+#### Tech Stack: Spring boot, GraphQL, React, OpenAPI 3.0
+
+- Researched and implemented API documentation for Banking Regulatory Reporting using OpenAPI 3.0 and Swagger UI to ease API development and speed up internal systems developments by up to 40%
+- Implemented a Carousel view for regulatory compliance tool to render and display new applications added
+- Designed an observable card component for tracking impression and click count of applications for metric analysis
