--- a/stories/experience/Y_Shopee.stories.mdx
+++ b/stories/experience/Y_Shopee.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from '@storybook/addon-docs';
+import shopeePic from '../assets/experience/shopee.png'
 
 <Meta title="Experiences/Shopee" />
 
@@ -9,10 +10,16 @@ import { Meta } from '@storybook/addon-docs';
   }}
 >
   <img 
-    src="https://www.freepnglogos.com/uploads/shopee-logo/logo-free-download-shopee-transparent-9.png"
+    src={shopeePic}
     height="200px"
   />
 </div>
 
 # Shopee
 ## Software Engineering Intern (Dec 2021 - May 2022)
+
+#### Tech Stack: React Native, Redux, Node.js, ESLint/Prettier, Husky, Jenkins, Storybook
+
+- Migrated 10+ product page modules to Shopee react native plugins for easier installation and portable usage
+- Pioneered the development of a standardized generic Shopee Calendar to improve user experience and UI flow
+- Spearheaded the Storybook Web project for Shopee Item Card to streamline UI development and documentation
