--- a/stories/experience/Z_Gigworks.stories.mdx
+++ b/stories/experience/Z_Gigworks.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from '@storybook/addon-docs';
+import gigworksPic from '../assets/experience/gigworks.png'
 
 <Meta title="Experiences/Gigworks" />
 
@@ -9,10 +10,16 @@ import { Meta } from '@storybook/addon-docs';
   }}
 >
   <img 
-    src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/khsyneixw7jy8zch8vc3"
+    src={gigworksPic}
     height="200px"
   />
 </div>
 
 # Gigworks Pte Ltd
 ## Mobile App Developer Intern (May - Aug 2021)
+
+#### Tech Stack: Flutter, Node.js, Express, Firebase, Docker, Google Cloud Platform
+
+- Integrated Unsplash API to display recommended stock images to speed up seller service listing workflow by 20%
+- Added 10 new currencies for Gigworks to expand regionally and reach a larger pool of users from other countries
+- Upgraded codebase to support Flutter 2 and migrated HTTP Firebase Cloud Functions to Google Cloud Run
