--- a/stories/About.stories.mdx
+++ b/stories/About.stories.mdx
@@ -543,7 +543,7 @@ import StackAlt from './assets/introduction/stackalt.svg';
       Check out my repositories <u>marcustw</u>
     </span>
   </a>
-  <a className="link-item" href="https://t.me/callmeplanb" target="_blank">
+  <a className="link-item" href="https://t.me/marcustw" target="_blank">
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"
       alt="telegram"
