feat: update squarepoint capital

--- a/stories/experience/W_TikTok.stories.mdx
+++ b/stories/experience/W_TikTok.stories.mdx
@@ -16,8 +16,11 @@ import tiktokPic from '../assets/experience/tiktok.png'
 </div>
 
 # TikTok
-## Mobile Engineer Intern (Aug 2022 - Present)
+## Mobile Engineer Intern (Aug 2022 - Dec 2022)
 
 #### Tech Stack: Android, Jetpack Compose
 
 - Developed a mini TikTok Android app with optimal performance stories lazy loading using Android Jetpack Libraries
+- Implemented Gifting combo animations frontend features for Android, resulting in 5% increase in gift revenue
+- Integrated gift combo strategies with wallet synchronisation to significantly reduce 85% of combo animation bugs
+
