feat: update readme

--- a/stories/About.stories.mdx
+++ b/stories/About.stories.mdx
@@ -187,9 +187,9 @@ import Marcus from './assets/about/Marcus_Tan_Wei.png';
       {' '}
       <strong>Marcus Tan!</strong>{' '}
     </span>{' '}
-    I am currently a Senior Year <em>Computer Science undergraduate</em> from
+    I am currently a Fresh Graduate with a <em>Bachelor of Computing, Computer Science</em> from
     the
-    <b> National University of Singapore</b>. My resume is linked
+    <b> National University of Singapore</b>. My main technologies are C++ and Python heehee :). I do have some Full-stack development experience and Data Engineering experience, but now my focus is to break into the trading industry! Looking to take up a Masters in Financial Engineering in the near future. Do take a look at my resume linked
     <a href="https://docs.google.com/document/d/14bKvyC2fMFP8p2um5Ioed3iu-PpSFdYG/edit?usp=sharing&ouid=100507967070655504589&rtpof=true&sd=true">
       {' '}
       here
